博客网站提交推荐数据方法
博客网站提交推荐数据方法

--- a/xzh.hzshuangmei.com/templets/shuangmei/_head.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/_head.htm
@@ -26,6 +26,7 @@
 
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-12"><a href="/laser/">美肤</a></li>
 
+           <li class="menu-item menu-item-type-taxonomy  menu-item-object-category menu-item-12"><a href="/injection/">注射美容</a></li>
 
         </ul>
     </div>
@@ -33,11 +34,11 @@
         <span class="sitenav-mask"></span>
         <span class="searchstart-on"><i class="fa">&#xe600;</i></span>
         <span class="searchstart-off"><i class="fa">&#xe606;</i></span>
-        <form  action="/search/" class="site-search-form searchform" id="bdcs-search-form" target="_blank" autocomplete="off"  >
+        <form  action="/search/" class="bdcs-search-form site-search-form searchform" id="sliding-search-form bdcs-search-form" target="_blank" autocomplete="off"  >
             <input type="hidden" name="s" value="5257607230163915007">
             <input type="hidden" name="entry" value="1">
-            <button tabindex="3" class="sbtn" type="submit" id="bdcs-search-form-submit"><i class="fa">&#xe600;</i></button>
-            <input tabindex="2" class="sinput" id="bdcsMain" name="q" type="text" placeholder="输入关键字" value="">
+            <button tabindex="3" class="bdcs-search-form-submit sbtn" type="submit" id="sliding-search-form-submit bdcs-search-form-submit"><i class="fa">&#xe600;</i></button>
+            <input tabindex="2" class="bdcs-search-form-input sinput" id="sliding-search-form-input bdcsMain" name="q" type="text" placeholder="输入关键字" value="">
         </form>
     </div>
 </header>
