--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -90,11 +90,12 @@
 						</a>
                         </li>
                         {/dede:arclist}
+                        {dede:FIELD.typeid function='getCaseArticleRelateProjectXZH(@me)'/}
                     </ul>
                 </div>
-                <div class="asst asst-single-comment">
-                    {dede:myad name='projectpic_pc'/}
-                </div>
+                <!--<div class="asst asst-single-comment">-->
+                    <!--{dede:myad name='projectpic_pc'/}-->
+                <!--</div>-->
             </div>
         </div>
         <div class="sidebar">
