博客文章页推荐
博客文章页推荐

--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -77,7 +77,7 @@
                     <span class="article-nav-prev">上一篇<br>{dede:prenext get='next'/}</span>
                     <span class="article-nav-next">下一篇<br>{dede:prenext get='pre'/}</span>
                 </nav>
-                <!--<div class="asst asst-single-footer">测试这是文章内容下的PC端广告位，你可以设置文字、图片和任何广告联盟代码</div>-->
+                <!--<div class="asst asst-single-footer">测试测试这是文章内容下的PC端广告位，你可以设置文字、图片和任何广告联盟代码</div>-->
                 <div class="postitems">
                     <h3>相关推荐</h3>
                     <ul>
