博客网站文章页推荐
博客网站文章页推荐

--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -90,7 +90,7 @@
 						</a>
                         </li>
                         {/dede:arclist}
-                        <!--{dede:FIELD.typeid function='getCaseArticleRelateProjectXZH(@me)'/}-->
+                        {dede:FIELD.typeid function='getCaseArticleRelateProjectXZH(@me)'/}
                     </ul>
                 </div>
                 <!--<div class="asst asst-single-comment">-->
