修改后台主页文件
修改后台主页文件

--- a/xzh.hzshuangmei.com/houtai/templets/index2.htm
+++ b/xzh.hzshuangmei.com/houtai/templets/index2.htm
@@ -79,7 +79,7 @@
         <li><a href="#" onclick="JumpFrame('catalog_menu.php','public_guide.php');">内容发布</a></li>
         <li><a href="#" onclick="JumpFrame('index_menu.php','content_list.php');">内容维护</a></li>
         <li><a href="#" onclick="JumpFrame('index_menu.php','index_body.php');">系统主页</a></li>
-        <li><a href="../index.php?upcache=1" target="_blank">网站主页</a></li>
+        <li><a href="../index.html" target="_blank">网站主页</a></li>
         <li><a href="exit.php" target="_top">注销</a></li>
       </ul>
       <div class="quick"> <a href="#" class="ac_qucikmenu" id="ac_qucikmenu">快捷方式</a> <a href="#" class="ac_qucikadd" id="ac_qucikadd">
