--- a/xzh.hzshuangmei.com/houtai/templets/index_top2.htm
+++ b/xzh.hzshuangmei.com/houtai/templets/index_top2.htm
@@ -103,7 +103,7 @@ a:link,a:visited {
 #tpa {
     color: #009933;
     margin:0px;
-    
+
     float:left;
 }
 
@@ -132,10 +132,10 @@ a:link,a:visited {
                 <dd class='img'><a href="javascript:ChangeMenu(0);"><img vspace="3" src="../images/arrfc.gif" border="0" width="12" height="12" alt="显示/隐藏左框架" title="显示/隐藏左框架" /></a></dd>
                 <dd class='img' style="margin-right:10px;"><a href="javascript:ChangeMenu(1);"><img vspace="5" src="images/arrr.gif" border="0" width="5" height="8" alt="增大左框架" title="增大左框架" /></a></dd>
                 <dd class='txt'>
-                    <a href="index_menu.php" target="menu">主菜单</a> | 
+                    <a href="index_menu.php" target="menu">主菜单</a> |
                 <a href="catalog_menu.php" target="menu">内容发布</a> |
                 <a href="index_body.php" target="main">系统主页</a> |
-                <a href="../index.php?upcache=1" target="_blank">网站主页</a> |  
+                <a href="../index.html" target="_blank">网站主页</a> |
             <a href="exit.php" target="_top">注销</a>
        </dd>
             </dl>
