导航栏美肤链接更改
导航栏美肤链接更改

--- a/xzh.hzshuangmei.com/templets/shuangmei/_head.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/_head.htm
@@ -24,7 +24,7 @@
 
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-12"><a href="/embroidery/">纹绣</a></li>
 
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-12"><a href="/laser/">美肤</a></li>
+            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-12"><a href="/beauty/">美肤</a></li>
 
            <li class="menu-item menu-item-type-taxonomy  menu-item-object-category menu-item-12"><a href="/injection/">注射美容</a></li>
 
