熊掌号后台改造
熊掌号后台改造

--- a/xzh.hzshuangmei.com/houtai/templets/archives_add.htm
+++ b/xzh.hzshuangmei.com/houtai/templets/archives_add.htm
@@ -80,8 +80,8 @@ function checkSubmit()
             </td>
 <!--主动推送数据 -->
 <td width="120">主动推送到百度：</td>
-<td><input type='radio' name='push' value="0" /> 不推送
-    <input type='radio' name='push' value="1"  checked='1'/> 推送</td>
+<td><input type='radio' name='push_xzh' value="0" /> 不推送
+    <input type='radio' name='push_xzh' value="1"  checked='1'/> 推送</td>
 <!--主动推送数据 -->
 
 
