--- a/xzh.hzshuangmei.com/houtai/templets/archives_edit.htm
+++ b/xzh.hzshuangmei.com/houtai/templets/archives_edit.htm
@@ -69,8 +69,8 @@ function checkSubmit()
 
   <!-- 主动推送数据 -->
 <td width="120">主动推送到百度：</td>
-<td><input type='radio' name='push' value="0"  <?php if($arcRow['push']=='0') echo " checked='1' "?>/> 不推送
-    <input type='radio' name='push' value="1"  <?php if($arcRow['push']=='1') echo " checked='1' "?>/> 推送</td>
+<td><input type='radio' name='push_xzh' value="0"  <?php if($arcRow['push_xzh']=='0') echo " checked='1' "?>/> 不推送
+    <input type='radio' name='push_xzh' value="1"  <?php if($arcRow['push_xzh']=='1') echo " checked='1' "?>/> 推送</td>
 
 <!-- 主动推送数据 -->
 
