--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -51,9 +51,9 @@
                 <div class="article-wechats">
                     <div class="article-wechatitem">
                         <img src="//img.hzshuangmei.com/pc/WeChatApplet.jpg">
-                        <div class="article-wechatitem-tit">微信小程序：见识多</div>
-                        <div class="article-wechatitem-desc">关注我们，每天分享更多有趣的事儿，有趣有料！</div>
-                        <div class="article-wechatitem-users">{dede:global.cfg_wechatitem_user/}人已关注</div>
+                        <div class="article-wechatitem-tit">微信小程序：红妆双美</div>
+                        <div class="article-wechatitem-desc">关注我们，N多种美丽神器！</div>
+                        <div class="article-wechatitem-users">1000人已购买</div>
                     </div>
                 </div>
                 <div class="article-actions clearfix">
