--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -84,7 +84,7 @@
                         {dede:FIELD.typeid function='getCaseArticleRelateProjectXZH(@me)'/}
                         {dede:arclist titlelen="120" row='4' flag='c' orderby ='pubdate' orderway="desc" }
                         <li>
-                            <a href="field:arcurl/]">
+                            <a href="[field:arcurl/]">
 						<span class="thumbnail">
 						<img src="[field:picname/]" data-src="[field:picname/]" class="thumb">
 					    </span>[field:title/]
