--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -65,7 +65,7 @@
                     var config = {
                         url: 'http://blog.wangjunfeng.com', // 分享的网页链接
                         title: '博客', // 标题
-                        desc: '王俊锋的个人博客', // 描述
+                        desc: '博客', // 描述
                         img: 'http://www.wangjunfeng.com/img/face.jpg', // 图片
                         img_title: '王俊锋的个人博客', // 图片标题
                         from: '王俊锋的博客' // 来源
