--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -68,7 +68,7 @@
                         desc: '博客', // 描述
                         img: 'http://www.wangjunfeng.com/img/face.jpg', // 图片
                         img_title: '王俊锋的个人博客', // 图片标题
-                        from: '王俊锋的博客' // 来源
+                        from: '王俊锋的' // 来源
                     };
                     var share_obj = new nativeShare('nativeShare', config);
                     </script>
