--- a/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -19,8 +19,8 @@
     <meta name="keywords" content="{dede:field.keywords/}">
     <meta name="description" content="{dede:field.description  function='html2text(@me)'/}">
     <!--[if lt IE 9]><script src="{dede:global.cfg_jspath/}/xzh/html5.js"></script><![endif]-->
-    <link rel='stylesheet' href='{dede:global.cfg_csspath/}/xzh/nativeShare.css' type='text/css' media='all' />
-    <script type='text/javascript' src='{dede:global.cfg_jspath/}/xzh/nativeShare.js'></script>
+    <!--<link rel='stylesheet' href='{dede:global.cfg_csspath/}/xzh/nativeShare.css' type='text/css' media='all' />-->
+    <!--<script type='text/javascript' src='{dede:global.cfg_jspath/}/xzh/nativeShare.js'></script>-->
 </head>
 <body class="post-template-default single single-post postid-738 single-format-standard comment-open list-thumb-hover-action nav-fixed-top">
     {dede:include filename="_head.htm"/}
@@ -60,17 +60,17 @@
                         <strong>分享到：</strong>
                         <a etap="share" data-share="qzone" class="share-qzone" title="分享到QQ空间"><i class="fa"></i></a><a etap="share" data-share="weibo" class="share-tsina" title="分享到新浪微博"><i class="fa"></i></a><a etap="share" data-share="tqq" class="share-tqq" title="分享到腾讯微博"><i class="fa"></i></a><a etap="share" data-share="qq" class="share-sqq" title="分享到QQ好友"><i class="fa"></i></a><a etap="share" data-share="renren" class="share-renren" title="分享到人人网"><i class="fa"></i></a><a etap="share" data-share="douban" class="share-douban" title="分享到豆瓣网"><i class="fa"></i></a>
                     </div>
-                    <script>
-                    var config = {
-                        url: 'https://xzh.hzshuangmei.com', // 分享的网页链接
-                        title: '护肤', // 标题
-                        desc: '护肤美容', // 描述
-                        img: '', // 图片
-                        img_title: '', // 图片标题
-                        from: 'https://xzh.hzshuangmei.com' // 来源
-                    };
-                    var share_obj = new nativeShare('nativeShare', config);
-                    </script>
+                    <!--<script>-->
+                    <!--var config = {-->
+                        <!--url: 'https://xzh.hzshuangmei.com', // 分享的网页链接-->
+                        <!--title: '护肤', // 标题-->
+                        <!--desc: '护肤美容', // 描述-->
+                        <!--img: '', // 图片-->
+                        <!--img_title: '', // 图片标题-->
+                        <!--from: 'https://xzh.hzshuangmei.com' // 来源-->
+                    <!--};-->
+                    <!--var share_obj = new nativeShare('nativeShare', config);-->
+                    <!--</script>-->
                 </div>
                 <nav class="article-nav">
                     <span class="article-nav-prev">上一篇<br>{dede:prenext get='next'/}</span>
