--- a/www.hzshuangmei.com/templets/shuangmei/_script.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_script.htm
@@ -1,7 +1,7 @@
 <!--<link rel="preload" href="{dede:global.cfg_jspath/}/pc/common.js" as="script" crossorigin>-->
 <!--<link rel="preload" href="{dede:global.cfg_jspath/}/pc/layer/layer.js" as="script" crossorigin>-->
 <!--<link rel="preload" href="{dede:global.cfg_jspath/}/pc/kst_popup.js" as="script" crossorigin>-->
-<!--<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <!--<script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.min.js"></script>-->
 <!--<script src="{dede:global.cfg_jspath/}/pc/common.js" ></script>-->
 <!--<script src="{dede:global.cfg_jspath/}/pc/layer/layer.js"></script>-->
