--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -464,7 +464,5 @@
 {dede:include filename="index_footer.htm"/}
 </body>
 {dede:include filename="_script.htm"/}
-<script>
-    ss(["https://js.hzshuangmei.com/pc/index.js","https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js","https://js.hzshuangmei.com/pc/kst_popup.js","https://js.hzshuangmei.com/pc/common.js","https://js.hzshuangmei.com/pc/layer/layer.js"])
-</script>
+<script src="{dede:global.cfg_jspath/}/pc/index.js"></script>
 </html>
