--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -464,5 +464,8 @@
 {dede:include filename="index_footer.htm"/}
 </body>
 {dede:include filename="_script.htm"/}
-<script src="{dede:global.cfg_jspath/}/pc/index.js"></script>
+<!--<script src="{dede:global.cfg_jspath/}/pc/index.js"></script>-->
+<script>
+    ss(['https://js.hzshuangmei.com/pc/layer/layer.js',"https://js.hzshuangmei.com/pc/common.js","https://js.hzshuangmei.com/pc/kst_popup.js","https://js.hzshuangmei.com/pc/index.js"])
+</script>
 </html>
