--- a/www.hzshuangmei.com/templets/shuangmei/_script.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_script.htm
@@ -3,9 +3,9 @@
 <link rel="preload" href="{dede:global.cfg_jspath/}/pc/kst_popup.js" as="script" crossorigin>
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.min.js"></script>
-<!--<script src="{dede:global.cfg_jspath/}/pc/common.js" ></script>-->
-<!--<script src="{dede:global.cfg_jspath/}/pc/layer/layer.js"></script>-->
-<!--<script src="{dede:global.cfg_jspath/}/pc/kst_popup.js"></script>-->
+<script src="{dede:global.cfg_jspath/}/pc/common.js" ></script>
+<script src="{dede:global.cfg_jspath/}/pc/layer/layer.js"></script>
+<script src="{dede:global.cfg_jspath/}/pc/kst_popup.js"></script>
  <!-- html5标签兼容ie低版本浏览器 -->
 <!-- [if lt IE 9]>     -->
 <script src="https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -14,23 +14,23 @@
 <!-- <script type="text/javascript">(function(){document.write(unescape('%3Cdiv id="bdcs"%3E%3C/div%3E'));var bdcs = document.createElement('script');bdcs.type = 'text/javascript';bdcs.async = true;bdcs.src = '//znsv.baidu.com/customer_search/api/js?sid=5257607230163915007' + '&plate_url=' + encodeURIComponent(window.location.href) + '&t=' + Math.ceil(new Date()/3600000);var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(bdcs, s);})();</script> -->
 
 <!--异步·-->
-<script>
-    var ss=function (a) {
-        function async_load() {
-            for (var i=0;i<a.length;i++){
-                var s=document.createElement("script");
-                s.type="text/javascript";
-                s.async=true;
-                s.src=a[i];
-                var x=document.getElementsByTagName('script')[0];
-                x.parentNode.appendChild(s);
-            }
+<!--<script>-->
+    <!--var ss=function (a) {-->
+        <!--function async_load() {-->
+            <!--for (var i=0;i<a.length;i++){-->
+                <!--var s=document.createElement("script");-->
+                <!--s.type="text/javascript";-->
+                <!--s.async=true;-->
+                <!--s.src=a[i];-->
+                <!--var x=document.getElementsByTagName('script')[0];-->
+                <!--x.parentNode.appendChild(s);-->
+            <!--}-->
 
-        }
-        if(window.attachEvent){
-            window.attachEvent('onload',async_load);
-        }else {
-            window.addEventListener('load',async_load)
-        }
-    };
-</script>
+        <!--}-->
+        <!--if(window.attachEvent){-->
+            <!--window.attachEvent('onload',async_load);-->
+        <!--}else {-->
+            <!--window.addEventListener('load',async_load)-->
+        <!--}-->
+    <!--};-->
+<!--</script>-->
