博客网站列表分页改为10条

--- a/xzh.hzshuangmei.com/templets/shuangmei/list_search.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_search.htm
@@ -17,8 +17,6 @@
     <title>{dede:field.title/}_红妆双美整形与美容宝典</title>
     <link rel='stylesheet' id='main-css' href='{dede:global.cfg_csspath/}/xzh/style.css' type='text/css' media='all' />
     <link href='{dede:global.cfg_csspath/}/xzh/artilec.css' rel="stylesheet" type="text/css" media="screen and (min-width: 320px) and (max-width: 768px)" />
-    <script src="https://cdn.bootcss.com/jquery/1.8.3/jquery.min.js" ></script>
-
     <meta name="description" content="{dede:field.description  function='html2text(@me)'/}">
     <!--[if lt IE 9]><script src="{dede:global.cfg_jspath/}/xzh/html5.js"></script><![endif]-->
 
@@ -63,6 +61,8 @@
             </script>
         </div>
     </div>
+<script src="https://cdn.bootcss.com/jquery/1.8.3/jquery.min.js" ></script>
+<script type='text/javascript' src='{dede:global.cfg_jspath/}/xzh/main.js'></script>
 <script src="{dede:global.cfg_jspath/}/xzh/cambrian_Tail.js"></script>
 </body>
 <script src="{dede:global.cfg_jspath/}/xzh/cambrian_Head.js"></script>
