--- a/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/list_index.htm
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
-    <title>红妆双美整形与美容宝典1</title>
+    <title>红妆双美整形与美容宝典2</title>
     <!-- favicon.ico -->
     <link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon" />
@@ -29,7 +29,7 @@
     <section class="container">
         <div class="excerpts-wrapper">
             <div class="excerpts">
-                {dede:list channelid='21'   pagesize='2' orderby='id'}
+                {dede:list pagesize="10" titlelen="120" orderby ='pubdate' orderway="desc"}
                 <article class="excerpt excerpt-c5">
                     <a class="thumbnail" href="[field:arcurl/]" target="_blank">
                     <img src="[field:litpic/]" data-src="[field:litpic/]" class="thumb">
